# notes

./: .env  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  diesel.toml  docker-compose.yml
migrations/2021-01-03-054508_note/: up.sql
scripts/: install-hooks.bash  run-tests.bash
src/: #main.rs#  main.rs
src/lib/: .#models.rs  client.rs  db.rs  mod.rs  routes.rs  schema.rs  service.rs  types.rs
src/lib/storage/: memory.rs  mod.rs  mysql.rs  psql.rs  traits.rs
src/lib/storage/psql/: mod.rs  models.rs  psql.rs  schema.rs
src/notes_lib/: Cargo.toml
src/notes_lib/src/: client.rs  lib.rs  routes.rs  service.rs
src/notes_lib/src/storage/: memory.rs  mod.rs  traits.rs
src/notes_lib/src/storage/psql/: mod.rs  models.rs  psql.rs
