[package]
name = "notes"
version = "0.1.0"
authors = ["Brendon Daugherty <brendond@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
env_logger = "0.8"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["full"] }
uuid = {version = "0.8", features = ["serde", "v4"]}
warp = "0.2"

