[package]
name = "notes"
version = "0.1.0"
authors = ["Brendon Daugherty <brendond@fb.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
env_logger = "0.8"
log = "0.4"
notes_lib = { path = "src/notes_lib" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2"
warp = "0.2"
